# simple_ipc

./: CMakeLists.txt  README.md  ipc_lock.cpp  ipc_lock.h  main.cpp  msg_comm.hpp  msg_recv.hpp  msg_send.hpp  shm_linux.cpp
